Replaced logo in nav
Old nav logo had a transparent fade. New does not.

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -30,7 +30,7 @@
 
   <section class="ourTeam">
 
-    <h1 id="ourTeam">Our Team</h1>
+    <h1 id="ourTeam" alt="ourTeam">Our Team</h1>
 
     <div class="ourTeamItems">
 
