--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -37,7 +37,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/email -->
-                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-email-30.png" alt="email" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>jl@legallab.ca</h4>
@@ -46,7 +46,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/phone -->
-                <img src="assets/images/icons/icons8-phone-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-phone-30.png" alt="phone" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>416-940-0198</h4>
@@ -55,7 +55,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/fax -->
-                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-fax-30.png" alt="fax" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>1-888-437-1252</h4>
@@ -82,7 +82,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/email -->
-                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-email-30.png" alt="email" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>ss@legallab.ca</h4>
@@ -91,7 +91,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/phone -->
-                <img src="assets/images/icons/icons8-phone-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-phone-30.png" alt="phone" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>416-625-2113</h4>
@@ -100,7 +100,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/fax -->
-                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-fax-30.png" alt="fax" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>1-888-437-1252</h4>
@@ -125,7 +125,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/email -->
-                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-email-30.png" alt="email" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>pamela@legallab.ca</h4>
@@ -134,7 +134,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/phone -->
-                <img src="assets/images/icons/icons8-phone-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-phone-30.png" alt="phone" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>905-990-0081</h4>
@@ -143,7 +143,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/fax -->
-                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-fax-30.png" alt="fax" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>1-888-437-1252</h4>
@@ -170,7 +170,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/email -->
-                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-email-30.png" alt="email" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>sandra@legallab.ca</h4>
@@ -179,7 +179,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/phone -->
-                <img src="assets/images/icons/icons8-phone-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-phone-30.png" alt="phone" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>647-262-9078</h4>
@@ -188,7 +188,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/fax -->
-                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-fax-30.png" alt="fax" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>1-888-437-1252</h4>
@@ -213,7 +213,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/email -->
-                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-email-30.png" alt="email" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>sm@legallab.ca </h4>
@@ -222,7 +222,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/phone -->
-                <img src="assets/images/icons/icons8-phone-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-phone-30.png" alt="phone" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>647-767-7406</h4>
@@ -231,7 +231,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/fax -->
-                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-fax-30.png" alt="fax" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>1-888-437-1252</h4>
@@ -256,7 +256,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/email -->
-                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-email-30.png" alt="email" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>kl@legallab.ca</h4>
@@ -265,7 +265,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/phone -->
-                <img src="assets/images/icons/icons8-phone-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-phone-30.png" alt="phone" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>905-990-0081</h4>
@@ -274,7 +274,7 @@
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/fax -->
-                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
+                <img src="assets/images/icons/icons8-fax-30.png" alt="fax" style="height: 30px; object-fit: contain;">
               </td>
               <td>
                 <h4>1-888-437-1252</h4>
@@ -289,7 +289,6 @@
     <br>
 
     <section class="locSect">
-
 
       <!-- <hr class="solidLine">-->
 
