--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
 
   <div class="footerLogo">
-    <img src="assets/images/LegalLabLogo.png">
+    <img src="../../../assets/images/logos/LegalLabLogo.png" alt="Legal Lab Logo">
   </div>
 
   <div class="footerContact">
@@ -36,9 +36,9 @@
     <h2>Get Connected</h2>
 
     <div class="socialMediaLinks">
-      <a href="https://www.instagram.com/legallab_law/?hl=en"> <img src="assets/images/Instagram_Glyph_Gradient.png">  </a>
+      <a href="https://www.instagram.com/legallab_law/?hl=en"> <img src="assets/images/Instagram_Glyph_Gradient.png" alt="instagram">  </a>
 
-      <a href="https://ca.linkedin.com/company/legal-lab-law"><img src="assets/images/Linked-In-Bug.png"> </a>
+      <a href="https://ca.linkedin.com/company/legal-lab-law"><img src="assets/images/Linked-In-Bug.png" alt="Linked-In"> </a>
     </div>
 
   </div>
