--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="titleHeader">
     <div class="headerLogo">
-      <a href="index.html"> <img src="assets/images/LegalLabLogo.png" alt="LegalLogo"> </a>
+      <a href="index.html"> <img src="../../../assets/images/logos/LegalLabLogo.png" alt="LegalLogo"> </a>
     </div>
     <nav class="navLinks">
 
