--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="hero">
-    <img src="assets/images/Services Picture.jpg" alt="AboutUs">
+    <img src="assets/images/Services Picture.jpg" alt="Services">
 
     <div class="heroTextContainer">
       <div class="servicesHeroText">
@@ -24,7 +24,7 @@
 
       <div class="serviceItems-row1">
         <div class="serviceItem">
-          <img id="commercial-residential" src="assets/images/Commercial-and-Residential.jpg">
+          <img id="commercial-residential" src="assets/images/Commercial-and-Residential.jpg" alt="commercial-residential">
           <h2>Commercial & Residential Real Estate Law</h2>
           <p>
             We have the expertise to assist and guide you through any commercial acquisitions/ dispositions of any type of asset. Whether you are acquiring a plaza and need support on the due diligence; thinking of doing a complex sale leaseback transaction; purchasing a hotel or a gas station; or purchasing a distressed real estate asset through bankruptcy or liquidation proceedings, we will work with you as an integral part of your team to ensure timely completion of the transaction. Our team can also assist with expropriations matters and ensure that as a property owner your rights are protected throughout the complex process. We are also always happy to support our clients with all their residential real estate needs whether it be to add to their investment portfolio or to assist with their primary residence, cottage transaction or residential refinance.
@@ -32,7 +32,7 @@
         </div>
 
         <div class="serviceItem">
-          <img id="corporate-comm"  src="assets/images/Corporate-Commercial-2048x1366.jpg">
+          <img id="corporate-comm"  src="assets/images/Corporate-Commercial-2048x1366.jpg" alt="Corporate & Commercial Law">
           <h2>Corporate & Commercial Law</h2>
           <p>
             Our corporate/commercial services are wide ranging. We can assist with review and preparation of a variety of contracts including but not limited to confidentiality agreements, master service agreements, supplier agreements, software and licensing agreements. On the transactional side we help our client with their incorporation, minute book organization, drafting and negotiation of shareholder agreements as well as share purchase agreement and asset purchase agreements.
@@ -42,7 +42,7 @@
 
       <div class="serviceItems-row2">
         <div class="serviceItem">
-          <img id="condo-development"  src="assets/images/condo-and-development.jpg">
+          <img id="condo-development"  src="assets/images/condo-and-development.jpg" alt="Condominium & Development Law">
           <h2>Condominium & Development Law</h2>
           <p>
             We work with many small and medium size developers across the GTA both in the commercial and residential space and we’d be happy to consult with you and guide you through the complex land use planning issues associated with development from the acquisition stage to the delivery of a finished product. We work on freehold and condominium projects and we can help you through Tarion and HCRA registration, as well as negotiate and prepare all development agreements required for your project including but not limited to site plan agreements, disclosures, template agreement of purchase and sale, cost-sharing agreements, easements and severances. We can also assist with condo conversion projects (both on the residential and commercial side).
@@ -50,7 +50,7 @@
         </div>
 
         <div class="serviceItem">
-          <img id="secured-lending"  src="assets/images/Secured-Lending.jpg">
+          <img id="secured-lending"  src="assets/images/Secured-Lending.jpg" alt="Secured Lending/Private Mortgages">
           <h2>Secured Lending/Private Mortgages</h2>
           <p>
             Our team can assist with any commercial refinance our borrower clients have and have experience acting for most major Canadian banks which makes our client’s refinance a quick and easy transaction. We also act for many private lenders and can assist our borrower clients with their private lending needs to ensure their rights are protected.
@@ -58,7 +58,7 @@
         </div>
 
         <div class="serviceItem">
-          <img id="commercial-leasing"  src="assets/images/Commercial-Leasing-2048x1367.jpg">
+          <img id="commercial-leasing"  src="assets/images/Commercial-Leasing-2048x1367.jpg" alt="Commercial Leasing">
           <h2>Commercial Leasing</h2>
           <p>
             Commercial leasing is an integral part of our legal services. We act for landlords and tenants to draft and negotiate leases, renewals, amending agreements and all type of leasing related agreements.
@@ -68,8 +68,6 @@
 
 
     </div>
-
-
 
   </section>
 
