--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -22,9 +22,11 @@
     <h1>Team:</h1>
     <br>
 
+
     <div class="contacts">
 
       <div class="contactItem">
+
         <div class="contactInfo">
           <h2>Jennifer Labrecque</h2>
           <h3>Lawyer</h3>
@@ -32,7 +34,9 @@
           <table class="contactCardTable">
             <tr>
               <th style="width:45px;"></th>
-              <th></th>
+              <th class="contact-image">
+                <!--                <img src="assets/images/team/Sumeet_S.PNG">-->
+              </th>
             </tr>
             <tr>
               <td>
@@ -53,7 +57,7 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="contact-image">
                 <!-- icon obtained from https://icons8.com/icons/set/fax -->
                 <img src="assets/images/icons/icons8-fax-30.png" alt="fax" style="height: 30px; object-fit: contain;">
               </td>
@@ -61,9 +65,12 @@
                 <h4>1-888-437-1252</h4>
               </td>
             </tr>
-
           </table>
 
+        </div>
+
+        <div class="card-member">
+          <img src="assets/images/team/Jennifer_L.png" alt="Jennifer Labrecque">
         </div>
 
       </div>
@@ -77,7 +84,9 @@
           <table class="contactCardTable">
             <tr>
               <th style="width:45px;"></th>
-              <th></th>
+              <th class="contact-image">
+<!--                <img src="assets/images/team/Sumeet_S.PNG">-->
+              </th>
             </tr>
             <tr>
               <td>
@@ -110,6 +119,10 @@
 
         </div>
 
+        <div class="card-member">
+          <img src="assets/images/team/Sumeet_S.PNG" alt="Sumeet Singh">
+        </div>
+
       </div>
 
       <div class="contactItem">
@@ -120,7 +133,7 @@
           <table class="contactCardTable">
             <tr>
               <th style="width:45px;"></th>
-              <th></th>
+              <th class="contact-image"></th>
             </tr>
             <tr>
               <td>
@@ -153,6 +166,10 @@
 
         </div>
 
+        <div class="card-member">
+          <img src="assets/images/team/Pam_A.jpeg" alt="Pam Angad">
+        </div>
+
       </div>
 
       <div class="contactItem">
@@ -164,7 +181,7 @@
           <table class="contactCardTable">
             <tr>
               <th style="width:45px;"></th>
-              <th></th>
+              <th class="contact-image"></th>
             </tr>
 
             <tr>
@@ -196,6 +213,11 @@
             </tr>
           </table>
         </div>
+
+        <div class="card-member">
+          <img src="assets/images/team/Sandra_G.PNG" alt="Sandra Gill">
+        </div>
+
       </div>
 
       <div class="contactItem">
@@ -207,7 +229,7 @@
           <table class="contactCardTable">
             <tr>
               <th style="width:45px;"></th>
-              <th></th>
+              <th class="contact-image"></th>
             </tr>
 
             <tr>
@@ -239,6 +261,10 @@
             </tr>
           </table>
         </div>
+
+        <div class="card-member">
+          <img src="assets/images/team/Shirisha_M.jpeg" alt="Shirisha Modoor">
+        </div>
       </div>
 
       <div class="contactItem">
@@ -250,7 +276,9 @@
           <table class="contactCardTable">
             <tr>
               <th style="width:45px;"></th>
-              <th></th>
+              <th class="contact-image">
+<!--                <img src="assets/images/team/Klara_L.jpeg">-->
+              </th>
             </tr>
 
             <tr>
@@ -281,6 +309,10 @@
               </td>
             </tr>
           </table>
+        </div>
+
+        <div class="card-member">
+          <img src="assets/images/team/Klara_L.jpeg" alt="Klara Lallinaj">
         </div>
       </div>
 
