added remote description
Some employees needed remote description

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -176,7 +176,7 @@
         <div class="contactInfo">
 
           <h2>Sandra Gill</h2>
-          <h3>Senior Corporate and Commercial Real Estate Clerk</h3>
+          <h3>Senior Corporate and Commercial Real Estate Clerk (Remote)</h3>
 
           <table class="contactCardTable">
             <tr>
@@ -224,7 +224,7 @@
         <div class="contactInfo">
 
           <h2>Shirisha Modoor</h2>
-          <h3>Senior Real Estate Clerk</h3>
+          <h3>Senior Real Estate Clerk (Remote)</h3>
 
           <table class="contactCardTable">
             <tr>
