--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -300,11 +300,11 @@
 
   .contactItem{
 
-    width:90%;
+    width:100%;
     height: 300px;
 
     padding: 0px;
-    margin: 0px;
+    margin: 10px 0px;
 
   }
 
