--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -296,6 +296,11 @@ img{
 
 }
 
+.practiceAreas h2{
+  font-size: 28px;
+
+}
+
 .practiceAreas h3{
   font-size: 60px;
   font-weight: bold;
@@ -339,7 +344,7 @@ img{
 .practiceItem{
 
   flex: 450px;
-  max-width: 500px;
+  max-width: 350px;
 }
 
 /**** Practice Section END ****/
