added site map and new bio
Bio description for Sumeet updated.

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -52,9 +52,13 @@
         <h3>Lawyer</h3>
         <br>
         <p>
-          Sumeet brings extensive knowledge in completing pre-construction real estate transactions and land acquisitions for the purpose of land development. He has also gained experience in Corporate Immigration while working with mid-size corporations by gaining approvals for foreign skilled workers to fill in gaps of growing businesses.
-
-          Sumeet is dedicated to finding affective and practical solutions to his client’s businesses and legal issues and delivering optimal outcomes when facing complexities and deadlines. Prior to his legal career, he has maintained the role of Director of Operations for 5 years in a fast-growing real estate start-up based out of Toronto. With a passion for real estate law and a desire to make an impact to his clients and their businesses, Sumeet decided to pursue law and was called to the Bar in 2022.
+          Sumeet possesses extensive expertise in successfully concluding pre-construction real estate transactions and acquiring land for the purpose of development. His professional background also encompasses Corporate Immigration, where he collaborated with mid-size corporations to secure approvals for employing foreign skilled workers, addressing staffing needs within expanding businesses.
+        </p>
+        <p>
+          Committed to delivering effective and pragmatic solutions for clients dealing with both business and legal challenges, Sumeet excels in achieving optimal outcomes amidst complexities and tight deadlines. Prior to entering the legal field, he served as the Director of Operations for a dynamic real estate startup based in Toronto, contributing to its growth for five years.
+        </p>
+        <p>
+          Driven by a passion for real estate law and a determination to positively impact clients and their enterprises, Sumeet transitioned to the legal profession, ultimately being called to the Bar in 2022.
         </p>
       </div>
 
