--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -26,9 +26,9 @@
       </div>
     </div>
 
-
     <br>
-    <p style="padding: 6px 0;">info@legallab.ca</p>
+    <p style="padding: 6px 0;">905-990-0081</p>
+    <p style="padding: 0px 0;">info@legallab.ca</p>
 
   </div>
 
