--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -109,6 +109,18 @@
         </p>
       </div>
 
+      <div class="ourTeamItem">
+        <img src="../../../assets/images/team/Victoria_K.PNG" alt="Victoria Kyriacou">
+
+        <br>
+        <h2>Victoria Kyriacou</h2>
+        <h3>Coop-Student Intern</h3>
+        <br>
+        <p>
+          Victoria is our Coop-Student Intern. Victoria helps our team with general office tasks, file intake and marketing and events.
+        </p>
+      </div>
+
     </div>
 
   </section>
