--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -316,6 +316,55 @@
         </div>
       </div>
 
+      <div class="contactItem">
+        <div class="contactInfo">
+
+          <h2>Victoria Kyriacou</h2>
+          <h3>Coop-Student Intern</h3>
+
+          <table class="contactCardTable">
+            <tr>
+              <th style="width:45px;"></th>
+              <th class="contact-image">
+                <!--                <img src="assets/images/team/Klara_L.jpeg">-->
+              </th>
+            </tr>
+
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/email -->
+                <img src="assets/images/icons/icons8-email-30.png" alt="email" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>accounting@legallab.ca</h4>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/phone -->
+                <img src="assets/images/icons/icons8-phone-30.png" alt="phone" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>905-990-0081</h4>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/fax -->
+                <img src="assets/images/icons/icons8-fax-30.png" alt="fax" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>1-888-437-1252</h4>
+              </td>
+            </tr>
+          </table>
+        </div>
+
+        <div class="card-member">
+          <img src="assets/images/team/Victoria_K.PNG" alt="Victoria Kyriacou">
+        </div>
+      </div>
+
     </div>
 
     <br>
