--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -105,27 +105,26 @@
   border-radius: 25px;
 
   /* max-width: 500px; */
-  width:480px;
+  width:500px;
   height: 300px;
   min-width: 200px;
 
   border: 1px solid rgb(197, 197, 197);
   box-shadow: 10px 10px 10px 10px #888888;
 
-  padding: 20px;
+  padding: 10px;
 
   /*justify-content: center;*/
   /*align-items: center;*/
 
   display: grid;
-  grid-gap: 25px;
+  grid-gap: 15px;
   grid-template-columns: 1fr 1fr;
 
 }
 
 .contactItem h2{
   font-size: 24px;
-
   padding-bottom: 8px;
 }
 
@@ -137,7 +136,7 @@
 
   text-align: left;
   overflow-wrap:break-word;
-  padding: 0 0px 0px 25px;
+  padding: 0 0px 0px 15px;
 
 }
 
@@ -148,7 +147,7 @@
 .contactCardTable{
   position: absolute;
   bottom: 25px;
-  left: 40px;
+  left: 20px;
   width: 100%;
 }
 
@@ -180,16 +179,25 @@
   /*height: 100%;*/
 
   display: flex;
-  justify-content: center;
   align-items: center;
   height: 100%;
   width: 100%;
+
+  justify-content: right;
 }
 
 .card-member img{
   /*object-fit: cover;*/
   width: 90%;
+
+  /*width: 120px;*/
+  height: 80%;
+
+  justify-content: right;
+  text-align: right;
   border-radius: 25px;
+
+  object-fit: cover;
 }
 
 /**** Contact Section END ****/
@@ -303,15 +311,21 @@
     width:100%;
     height: 300px;
 
-    padding: 0px;
+    padding: 15px 0;
     margin: 10px 0px;
 
   }
 
+  .card-member{
+    /*justify-content: center;*/
+    padding: 0 15px 0 0;
+  }
+
   .card-member img{
-    width: 120px;
-    height: 80%;
+    width: 140px;
+    height: 90%;
     object-fit: cover;
+
   }
 
 }
