--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -63,6 +63,23 @@
       </div>
 
       <div class="ourTeamItem">
+        <img src="../../../assets/images/team/Delana_Z.PNG" alt="Delana Zamparo">
+
+        <h2>Delana Zamparo</h2>
+        <h3 style="color:white;">_</h3>
+        <br>
+        <p>
+          Delana attended University of Toronto and is the newest addition to the Legal Lab Team. Prior to joining Legal Lab, Delana owned and operated a successful business for several years. Her business acumen and her amazing spirit is a great addition to the team.
+        </p>
+        <p>
+          Committed to delivering effective and pragmatic solutions for clients dealing with both business and legal challenges, Sumeet excels in achieving optimal outcomes amidst complexities and tight deadlines. Prior to entering the legal field, he served as the Director of Operations for a dynamic real estate startup based in Toronto, contributing to its growth for five years.
+        </p>
+        <p>
+          Driven by a passion for real estate law and a determination to positively impact clients and their enterprises, Sumeet transitioned to the legal profession, ultimately being called to the Bar in 2022.
+        </p>
+      </div>
+
+      <div class="ourTeamItem">
         <img src="../../../assets/images/team/Pam_A.jpeg" alt="Pam Angad">
 
         <h2>Pam Angad</h2>
@@ -102,7 +119,7 @@
 
         <br>
         <h2>Klara Lallinaj</h2>
-        <h3>Residential Real Estate Clerk</h3>
+        <h3>Real Estate Clerk</h3>
         <br>
         <p>
           Klara joined our firm in June 2023. Klara is our intake clerk and assist with residential transactions and interim occupancies.
