--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -329,3 +329,46 @@
   }
 
 }
+
+@media only screen and (max-width: 430px){
+
+  .contactItem{
+
+    width:100%;
+    height: 280px;
+
+    padding: 15px 0;
+    margin: 10px 0px;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    /*
+    grid-template-areas:
+      'contactPic'
+      'contactData';
+
+    grid-gap: 15px;
+    */
+
+  }
+
+  /*
+  .contactInfo{
+    grid-area: contactData;
+  }
+   */
+
+  /*
+  .card-member{
+    grid-area: contactPic;
+    padding: 0 15px 0 0;
+  }
+*/
+  .card-member img{
+    width: 0px;
+    height: 90px;
+    object-fit: cover;
+
+  }
+
+}
