--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -126,6 +126,56 @@
       </div>
 
       <div class="contactItem">
+
+        <div class="contactInfo">
+          <h2>Delana Zamparo</h2>
+          <h3 style="color:white;">_</h3>
+
+          <table class="contactCardTable">
+            <tr>
+              <th style="width:45px;"></th>
+              <th class="contact-image">
+                <!--                <img src="assets/images/team/Sumeet_S.PNG">-->
+              </th>
+            </tr>
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/email -->
+                <img src="assets/images/icons/icons8-email-30.png" alt="email" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>info@legallab.ca</h4>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/phone -->
+                <img src="assets/images/icons/icons8-phone-30.png" alt="phone" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>905-990-0081</h4>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/fax -->
+                <img src="assets/images/icons/icons8-fax-30.png" alt="fax" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>1-888-437-1252</h4>
+              </td>
+            </tr>
+          </table>
+
+        </div>
+
+        <div class="card-member">
+          <img src="assets/images/team/Delana_Z.PNG" alt="Delana Zamparo">
+        </div>
+
+      </div>
+
+      <div class="contactItem">
         <div class="contactInfo">
           <h2>Pam Angad</h2>
           <h3>Senior Real Estate Clerk</h3>
