--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -314,6 +314,9 @@
     padding: 15px 0;
     margin: 10px 0px;
 
+    border: 1px solid rgb(197, 197, 197);
+    box-shadow: 0px 10px 10px 0px;
+
   }
 
   .card-member{
